--- a/front/public/index.html
+++ b/front/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Tomás Kavanagh's Windows 98 clone portafolio site"
+      content="Tomás Kavanagh's Windows 98 clone portfolio site"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
